# quant_solo_projet_cpp

./: .gitignore  CMakeLists.txt
OptionPricing_Hedging_Engine/: CMakeLists.txt  README.md
OptionPricing_Hedging_Engine/include/pricing/core/: BlackScholesModel.hpp  Normal.hpp  Option.hpp  Payoff.hpp
OptionPricing_Hedging_Engine/include/pricing/methods/: AnalyticalPricer.hpp  HedgingSimulator.hpp  LongstaffSchwartzPricer.hpp  MonteCarloPricer.hpp  PDESolver.hpp
OptionPricing_Hedging_Engine/include/pricing/ui/: Interface.hpp
OptionPricing_Hedging_Engine/include/pricing/util/: LinearSolver.hpp
OptionPricing_Hedging_Engine/src/apps/: bs_mc_pde_demo.cpp  hedging_demo.cpp
OptionPricing_Hedging_Engine/src/core/: BlackScholesModel.cpp  Normal.cpp  Option.cpp
OptionPricing_Hedging_Engine/src/methods/: AnalyticalPricer.cpp  HedgingSimulator.cpp  LongstaffSchwartzPricer.cpp  MonteCarloPricer.cpp  PDESolver.cpp
OptionPricing_Hedging_Engine/src/ui/: Interface.cpp
OptionPricing_Hedging_Engine/src/util/: LinearSolver.cpp
Systematic_Equity_Alpha_Research_Platform/: README.md  requirements.txt
Systematic_Equity_Alpha_Research_Platform/src/equity_alpha/backtest/: analytics.py  engine.py
Systematic_Equity_Alpha_Research_Platform/src/equity_alpha/data/: data_loader.py  factors.py
Systematic_Equity_Alpha_Research_Platform/src/equity_alpha/models/: linear_factor_model.py  ml_models.py
include/: AnalyticalPricer.hpp  MonteCarloPricer.hpp  Option.hpp
src/: AnalyticalPricer.cpp  BlackScholesModel.cpp  MonteCarloPricer.cpp  Normal.cpp  Option.cpp  main.cpp
(+3 files in other folders)
